--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.6.4"
+    "typescript": "^3.7.0-beta"
   },
   "scripts": {
     "start": "react-scripts start",
