--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-bundler": "^26.0.0",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.7.0-beta"
   },
