--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-bundler": "^26.0.0",
+    "redux-bundler-react": "^1.2.0",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "typescript": "^3.7.0-beta"
   },
   "scripts": {
@@ -41,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.3",
+    "@testing-library/react": "^9.3.2",
     "axios-mock-adapter": "^1.17.0",
     "react-testing-library": "^8.0.1"
   }
