--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "global": "^4.4.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
@@ -19,7 +22,8 @@
     "redux-bundler-react": "^1.2.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "typescript": "^3.7.0-beta"
+    "typescript": "^3.7.0-beta",
+    "wordpos": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
